# fittrack-ml

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
models/: model_info.json
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_classical_ml.ipynb  04_deep_learning.ipynb  05_mlops.ipynb
src/fittrack/: __init__.py
src/fittrack/data/: __init__.py  download.py  ingestion.py  parallel_processing.py  preprocessing.py
src/fittrack/deployment/: __init__.py  api.py
src/fittrack/features/: __init__.py  engineering.py
src/fittrack/mlops/: __init__.py  ab_testing.py  registry.py  tracking.py
src/fittrack/models/: __init__.py  classical.py  data_loaders.py  deep_learning.py  evaluation.py
tests/: __init__.py  conftest.py  test_api.py  test_data_ingestion.py  test_download.py  test_features.py  test_mlops.py  test_models_classical.py  test_models_deep.py
